examples/test/testpolicy9346.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9346
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key25: value23
      key42: value35
      key19: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value13
          key21: value17
          key46: value16
      podSelector:
        matchLabels:
          key44: value19
